# solana-arbitrage-bot

./: .env.example  .gitignore  Cargo.toml  README.md  backup.sh  dockerfile  git init  git init.pub  package-lock.json  wallet.json
.github/workflows/: rust.yml
config/: config.json  dexes.json
scripts/: install.sh  launch.sh
src/: bot.rs  cli.rs  config.rs  config.ts  init.rs  lib.rs  main.rs  server.rs  server.ts  types.rs  types.ts  utils.rs
src/execution/: mev_builder.rs  mod.rs  transaction_builder.rs
src/strategies/: mod.rs  multi_dex.rs  triangle.rs  two_hop.rs
tests/: integration_tests.rs
~/: .zshrc
