[package]
name = "solana-arbitrage-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
warp = "0.3"
solana-sdk = "1.17"
solana-client = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
lazy_static = "1.4"
chrono = "0.4"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
prettytable-rs = "0.10" 